--- a/src/temalar/tahta/styles.css
+++ b/src/temalar/tahta/styles.css
@@ -108,6 +108,8 @@ body{
 		justify-content:center;
 		align-items:center;
 		margin-left:3px;
+		outline: 1px dashed #fff;
+		outline-offset: -2px;
 	}
 		#ekran_oyun .grid-item[draggable] {
 			-webkit-user-select: none;
