--- a/src/temalar/duvar_2/styles.css
+++ b/src/temalar/duvar_2/styles.css
@@ -108,6 +108,8 @@ body{
 		justify-content:center;
 		align-items:center;
 		margin-left:3px;
+		outline: 2px dashed #f00;
+		outline-offset: -2px;
 	}
 		#ekran_oyun .grid-item[draggable] {
 			-webkit-user-select: none;
